--- a/diferenciais.html
+++ b/diferenciais.html
@@ -221,7 +221,12 @@
             <div class="container">
                 <h3>PRONTO PARA EXPERIMENTAR NOSSO DIFERENCIAL?</h3>
                 <p>Entre em contato e descubra como podemos proteger seus dados com tecnologia e expertise jurídica.</p>
-                <a href="contato.html" class="cyber-button big pulse">FALE COM UM ESPECIALISTA</a>
+                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20conversar%20com%20um%20especialista%20sobre%20seus%20serviços.%20Poderia%20me%20ajudar?" 
+   class="cyber-button big pulse" 
+   target="_blank"
+   title="Conversar no WhatsApp">
+   FALE COM UM ESPECIALISTA
+</a>
             </div>
         </section>
     </main>
