--- a/servicos.html
+++ b/servicos.html
@@ -79,7 +79,7 @@
                         <div class="service-hub-text">
                             <h3>Cadeia de Custódia</h3>
                             <p>Garantia da integridade de evidências digitais com registro imutável em blockchain e protocolos juridicamente válidos.</p>
-                            <a href="servicos/cadeia-custodia.html" class="cyber-button small">Detalhes do Serviço</a>
+                            <a href="cadeia-custodia.html" class="cyber-button small">Detalhes do Serviço</a>
                         </div>
                     </div>
                     <div class="service-hub-image">
@@ -95,7 +95,7 @@
                         <div class="service-hub-text">
                             <h3>Perícia em Dispositivos</h3>
                             <p>Extração e análise forense de dados em qualquer dispositivo com tecnologia proprietária que preserva a integridade das evidências.</p>
-                            <a href="servicos/pericia-dispositivos.html" class="cyber-button small">Detalhes do Serviço</a>
+                            <a href="pericia-dispositivos.html" class="cyber-button small">Detalhes do Serviço</a>
                         </div>
                     </div>
                     <div class="service-hub-image">
@@ -111,7 +111,7 @@
                         <div class="service-hub-text">
                             <h3>Análise de Interceptações</h3>
                             <p>Detecção de vulnerabilidades em sistemas de comunicação e análise jurídica da validade de interceptações.</p>
-                            <a href="servicos/analise-interceptacoes.html" class="cyber-button small">Detalhes do Serviço</a>
+                            <a href="analise-interceptacoes.html" class="cyber-button small">Detalhes do Serviço</a>
                         </div>
                     </div>
                     <div class="service-hub-image">
@@ -127,7 +127,7 @@
                         <div class="service-hub-text">
                             <h3>Segurança da Informação</h3>
                             <p>Proteção avançada de dados com soluções customizadas que atendem aos requisitos da LGPD e outros frameworks regulatórios.</p>
-                            <a href="servicos/seguranca-informacao.html" class="cyber-button small">Detalhes do Serviço</a>
+                            <a href="seguranca-informacao.html" class="cyber-button small">Detalhes do Serviço</a>
                         </div>
                     </div>
                     <div class="service-hub-image">
@@ -143,7 +143,7 @@
                         <div class="service-hub-text">
                             <h3>Consultoria em LGPD</h3>
                             <p>Implementação completa da Lei Geral de Proteção de Dados com assessoria jurídica e tecnológica integrada.</p>
-                            <a href="servicos/consultoria-lgpd.html" class="cyber-button small">Detalhes do Serviço</a>
+                            <a href="consultoria-lgpd.html" class="cyber-button small">Detalhes do Serviço</a>
                         </div>
                     </div>
                     <div class="service-hub-image">
@@ -157,7 +157,12 @@
             <div class="container">
                 <h3>NÃO ENCONTROU O QUE PRECISA?</h3>
                 <p>Temos soluções customizadas para necessidades específicas de proteção de dados.</p>
-                <a href="contato.html" class="cyber-button big pulse">FALE COM NOSSO TIME</a>
+                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20conversar%20com%20um%20especialista%20sobre%20seus%20serviços.%20Poderia%20me%20ajudar?" 
+   class="cyber-button big pulse" 
+   target="_blank"
+   title="Conversar no WhatsApp">
+   FALE COM UM ESPECIALISTA
+</a>
             </div>
         </section>
     </main>
