--- a/cadeia-custodia.html
+++ b/cadeia-custodia.html
@@ -103,7 +103,11 @@
                             </ul>
                             
                             <div class="service-cta">
-                                <a href="../contato.html" class="cyber-button">SOLICITAR DEMONSTRAÇÃO</a>
+                                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20solicitar%20um%20orçamento%20dos%20seus%20serviços.%20Poderia%20me%20enviar%20mais%20informações?" 
+   class="cyber-button" 
+   target="_blank">
+   SOLICITAR DEMONSTRAÇÃO
+</a>
                                 <p>Implementação em 72 horas</p>
                             </div>
                         </div>
