--- a/pericia-dispositivos.html
+++ b/pericia-dispositivos.html
@@ -100,7 +100,11 @@
                             </ul>
                             
                             <div class="service-cta">
-                                <a href="contato.html" class="cyber-button">SOLICITAR ORÇAMENTO</a>
+                                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20solicitar%20um%20orçamento%20dos%20seus%20serviços.%20Poderia%20me%20enviar%20mais%20informações?" 
+   class="cyber-button" 
+   target="_blank">
+   SOLICITAR ORÇAMENTO
+</a>
                                 <p>Resposta em até 24 horas</p>
                             </div>
                         </div>
