--- a/index.html
+++ b/index.html
@@ -368,13 +368,19 @@
                 <div class="social-links">
                     <a href="#"><i class="fab fa-linkedin"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/argus.cg/?igsh=MW91YWt1NHUwNnR6ZQ%3D%3D" 
+   class="cyber-social-button" 
+   target="_blank"
+   rel="noopener noreferrer"
+   title="Nos siga no Instagram">
+   <i class="fab fa-instagram"></i>
+</a>
                 </div>
             </div>
             <div class="footer-column">
                 <h4>LINKS RÁPIDOS</h4>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="diferenciais.html">Diferenciais</a></li>
                     <li><a href="https://wa.me/554899120099" target="_blank">Contato</a></li>
