--- a/diferenciais.html
+++ b/diferenciais.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero differentials-hero">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="O_NOSSO_DIFERENCIAL">O_NOSSO_DIFERENCIAL</h2>
+                <h2 class="cyber-title" data-text="O NOSSO DIFERENCIAL">O NOSSO DIFERENCIAL</h2>
                 <p class="cyber-subtitle">Por que escolher a Argus Consulting Group?</p>
             </div>
             <div class="hero-background">
