--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <section class="cyber-hero">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="PRIVACIDADE_É_PODER">PRIVACIDADE É PODER</h2>
+                <h2 class="cyber-title" data-text="PRIVACIDADE É PODER">PRIVACIDADE É PODER</h2>
                 <p class="cyber-subtitle">Proteção de dados com tecnologia de ponta e expertise jurídica</p>
                 <a href="https://api.whatsapp.com/send?phone=554899120099" class="cyber-button big pulse" target="_blank">PROTEJA SEUS DADOS AGORA</a>
             </div>
