--- a/investigacao-defensiva.html
+++ b/investigacao-defensiva.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero service-hero" style="background-image: linear-gradient(rgba(30, 63, 75, 0.8), rgba(30, 63, 75, 0.8)), url('../images/service-hero-1.jpg');">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="INVESTIGAÇÃO_DEFENSIVA">INVESTIGAÇÃO DEFENSIVA</h2>
+                <h2 class="cyber-title" data-text="INVESTIGAÇÃO DEFENSIVA">INVESTIGAÇÃO DEFENSIVA</h2>
                 <p class="cyber-subtitle">Proteção proativa contra ameaças digitais antes que sejam exploradas</p>
             </div>
         </section>
