--- a/seguranca-informacao.html
+++ b/seguranca-informacao.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero service-hero" style="background-image: linear-gradient(rgba(30, 63, 75, 0.8), rgba(30, 63, 75, 0.8)), url('../images/service-hero-1.jpg');">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="SEGURANÇA_DA_INFORMAÇÃO">SEGURANÇA DA INFORMAÇÃO</h2>
+                <h2 class="cyber-title" data-text="SEGURANÇA DA INFORMAÇÃO">SEGURANÇA DA INFORMAÇÃO</h2>
                 <p class="cyber-subtitle">Proteção avançada para dados, sistemas e infraestrutura crítica</p>
             </div>
         </section>
