--- a/cadeia-custodia.html
+++ b/cadeia-custodia.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero service-hero" style="background-image: linear-gradient(rgba(30, 63, 75, 0.8), rgba(30, 63, 75, 0.8)), url('../images/service-2.jpg');">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="CADEIA_DE_CUSTÓDIA">CADEIA DE CUSTÓDIA</h2>
+                <h2 class="cyber-title" data-text="CADEIA DE CUSTÓDIA">CADEIA DE CUSTÓDIA</h2>
                 <p class="cyber-subtitle">Garantia de integridade de evidências digitais com blockchain</p>
             </div>
         </section>
