--- a/consultoria-lgpd.html
+++ b/consultoria-lgpd.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero service-hero" style="background-image: linear-gradient(rgba(30, 63, 75, 0.8), rgba(30, 63, 75, 0.8)), url('../images/service-hero-3.jpg');">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="CONSULTORIA_EM_LGPD">CONSULTORIA EM LGPD</h2>
+                <h2 class="cyber-title" data-text="CONSULTORIA EM LGPD">CONSULTORIA EM LGPD</h2>
                 <p class="cyber-subtitle">Adequação completa à Lei Geral de Proteção de Dados com especialistas certificados</p>
             </div>
         </section>
