--- a/pericia-dispositivos.html
+++ b/pericia-dispositivos.html
@@ -48,7 +48,7 @@
     <main>
         <section class="cyber-hero service-hero" style="background-image: linear-gradient(rgba(30, 63, 75, 0.8), rgba(30, 63, 75, 0.8)), url('../images/service-hero-2.jpg');">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="PERÍCIA_EM_DISPOSITIVOS">PERÍCIA EM DISPOSITIVOS</h2>
+                <h2 class="cyber-title" data-text="PERÍCIA EM DISPOSITIVOS">PERÍCIA EM DISPOSITIVOS</h2>
                 <p class="cyber-subtitle">Análise forense especializada em smartphones, computadores e dispositivos IoT</p>
             </div>
         </section>
