--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <section class="cyber-hero">
             <div class="hero-content">
-                <h2 class="cyber-title" data-text="Assessoramento estratégico">Assessoramento estratégico</h2>
+                <h2 class="cyber-title" data-text="Assessoria estratégica">Assessoria estratégica</h2>
                 <p class="cyber-subtitle">Consultoria especializada em Privacidade e Proteção de Dados.</p>
                 <a href="https://api.whatsapp.com/send?phone=554899120099" class="cyber-button big pulse" target="_blank">FALAR COM ESPECIALISTA</a>
             </div>
