--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Respeito ao cliente
 <section class="cyber-investment">
     <div class="cyber-investment-container">
         <div class="cyber-investment-header">
-            <h2 class="cyber-investment-title" data-text="INVESTIMENTO ≠ CUSTO">INVESTIMENTO ≠ CUSTO</h2>
+            <h2 class="cyber-investment-title" data-text="INVESTIMENTO É DIFERENTE DE CUSTO">INVESTIMENTO É DIFERENTE DE CUSTO</h2>
             <div class="cyber-investment-line"></div>
         </div>
         
