--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
             </div>
         </section>
 
+        
+
         <section class="cyber-differentials">
             <div class="container">
                 <h3 class="section-title">NOSSO <span>DIFERENCIAL</span></h3>
@@ -191,21 +193,14 @@
         <div class="cyber-about-content">
             <div class="cyber-about-text">
                 <p class="cyber-about-description">
-                    <STRONG>Grande o suficiente para atendê-lo, pequeno o suficiente para conhecê-lo </STRONG>
-                    <BR></BR>
-Na Argus Consulting Group, nosso time é multidisciplinar: TI, Jurídico e Gestão de Projetos, com profissionais dedicados e alocados com exclusividade, atuando em tempo integral, conforme o escopo do Projeto, unindo: <br>
-<br>
-Especialização
-<br>
-Certificações internacionais
-<br>
-Experiência
-<br>
-Agilidade
-<br>
-Respeito ao cliente
-<br>
-<br>
+                    <p>
+                        A Argus Consulting Group nasceu da necessidade de integrar tecnologia e direito de maneira eficiente e segura. Fundada por especialistas em segurança digital com mais de 15 anos de experiência no setor forense, nossa empresa tem como missão fornecer aos advogados as ferramentas e os conhecimentos técnicos necessários para enfrentar os desafios da era digital. <br>
+                        <br>
+                        Nosso nome foi inspirado no vigilante Argus Panoptes, da mitologia grega, conhecido por seus cem olhos sempre atentos — simbolizando nossa capacidade de observar cuidadosamente todos os aspectos técnicos relevantes de cada caso, sem deixar passar nenhum detalhe importante. <br>
+                        <br>
+                        Nossa equipe multidisciplinar reúne peritos em computação forense, analistas de segurança da informação e consultores jurídicos especializados, proporcionando uma abordagem completa para as necessidades tecnológicas dos profissionais do direito. <br>
+                        <br>
+                    </p>
                 <a href="https://wa.me/554899120099" class="cyber-button pulse" target="_blank">
                     FALE COM NOSSOS ESPECIALISTAS
                 </a>
