--- a/investigacao-defensiva.html
+++ b/investigacao-defensiva.html
@@ -210,7 +210,7 @@
             <div class="container">
                 <h3>PROTEJA SEUS DIREITOS COM EVIDÊNCIAS SÓLIDAS</h3>
                 <p>Nossa equipe especializada está pronta para assessorar sua empresa com investigação defensiva e proteção de dados.</p>
-                <a href="contato.html" class="cyber-button big pulse">FALE COM UM ESPECIALISTA</a>
+                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20conversar%20sobre%20análise%20de%20interceptações" class="cyber-button big pulse" target="_blank">FALE COM UM ESPECIALISTA</a>
             </div>
         </section>
     </main>
