--- a/pericia-dispositivos.html
+++ b/pericia-dispositivos.html
@@ -210,7 +210,7 @@
             <div class="container">
                 <h3>DADOS DELETADOS NÃO SIGNIFICAM INFORMAÇÕES PERDIDAS</h3>
                 <p>Nossa perícia técnica pode recuperar as evidências digitais que farão a diferença no seu caso.</p>
-                <a href="contato.html" class="cyber-button big pulse">RECUPERAR PROVAS AGORA</a>
+                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20conversar%20sobre%20análise%20de%20interceptações" class="cyber-button big pulse" target="_blank">RECUPERAR PROVAS AGORA</a>
             </div>
         </section>
     </main>
