--- a/cadeia-custodia.html
+++ b/cadeia-custodia.html
@@ -210,7 +210,7 @@
             <div class="container">
                 <h3>SUAS PROVAS DIGITAIS COM GARANTIA DE ACEITAÇÃO JUDICIAL</h3>
                 <p>Nossa assessoria técnica-jurídica garante a validade processual de suas evidências digitais.</p>
-                <a href="contato.html" class="cyber-button big pulse">PROTEJA SUAS PROVAS</a>
+                <a href="https://wa.me/554899120099?text=Olá,%20gostaria%20de%20conversar%20sobre%20análise%20de%20interceptações" class="cyber-button big pulse" target="_blank">PROTEJA SUAS PROVAS</a>
             </div>
         </section>
     </main>
