--- a/consultoria-lgpd.html
+++ b/consultoria-lgpd.html
@@ -32,10 +32,10 @@
     <div class="nav-wrapper">
       <nav class="cyber-nav">
         <ul>
-          <li><a href="index.html">inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="diferenciais.html">Diferenciais</a></li>
-          <li><a href="https://wa.me/554899120099" class="cyber-button" target="_blank">Contato</a></li>
+          <li><a href="https://wa.me/554899120099">Contato</a></li>
         </ul>
       </nav>
       <div class="menu-toggle">
