--- a/cadeia-custodia.html
+++ b/cadeia-custodia.html
@@ -115,27 +115,27 @@
                     </div>
                 </div>
                 
-                <div class="service-technologies">
-                    <h4>Metodologia de Auditoria</h4>
-                    <div class="tech-grid">
-                        <div class="tech-item">
-                            <i class="fas fa-link"></i>
-                            <span>Verificação Blockchain</span>
-                        </div>
-                        <div class="tech-item">
-                            <i class="fas fa-fingerprint"></i>
-                            <span>Confronto de Hashes</span>
-                        </div>
-                        <div class="tech-item">
-                            <i class="fas fa-clock"></i>
-                            <span>Análise Temporal</span>
-                        </div>
-                        <div class="tech-item">
-                            <i class="fas fa-file-signature"></i>
-                            <span>Validação de Assinaturas</span>
-                        </div>
-                    </div>
-                </div>
+<div class="service-technologies">
+    <h4>Metodologia de Auditoria</h4>
+    <div class="tech-grid">
+        <div class="tech-item">
+            <i class="fas fa-history"></i>
+            <span>Linha do Tempo & Registros</span>
+        </div>
+        <div class="tech-item">
+            <i class="fas fa-gavel"></i>
+            <span>Validação Legal & CPP</span>
+        </div>
+        <div class="tech-item">
+            <i class="fas fa-search"></i>
+            <span>Técnica Forense & Integridade</span>
+        </div>
+        <div class="tech-item">
+            <i class="fas fa-globe"></i>
+            <span>Padrões Internacionais & ISSO</span>
+        </div>
+    </div>
+</div>
                 
                 <div class="service-process">
                     <h4>Fluxo de Análise Técnica</h4>
