--- a/servicos.html
+++ b/servicos.html
@@ -32,7 +32,7 @@
             <div class="nav-wrapper">
                 <nav class="cyber-nav">
                     <ul>
-                        <li><a href="index.html">inicio</a></li>
+                        <li><a href="index.html">Início</a></li>
                         <li><a href="servicos.html">Serviços</a></li>
                         <li><a href="diferenciais.html">Diferenciais</a></li>
                         <li><a href="https://wa.me/554899120099">Contato</a></li>
@@ -49,7 +49,7 @@
         <section class="cyber-hero services-hero">
             <div class="hero-content">
                 <h2 class="cyber-title" data-text="NOSSOS SERVIÇOS">NOSSOS SERVIÇOS</h2>
-                <p class="cyber-subtitle">Tecnologia e expertise jurídica para proteger seus dados</p>
+                <p class="cyber-subtitle">Nossa Expertise Técnica a Serviço da Sua Estratégia Jurídica Vencedora</p>
             </div>
             <div class="hero-background">
                 <div class="cyber-grid"></div>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="service-hub-text">
                             <h3>Investigação Defensiva</h3>
-                            <p>Identificamos vulnerabilidades antes que sejam exploradas, combinando técnicas forenses digitais com análise jurídica preventiva.</p>
+                            <p>Desvendando a verdade com inteligência e tecnologia para uma defesa robusta.</p>
                             <a href="investigacao-defensiva.html" class="cyber-button small">Detalhes do Serviço <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="service-hub-text">
                             <h3>Cadeia de Custódia</h3>
-                            <p>Garantia da integridade de evidências digitais com registro imutável em blockchain e protocolos juridicamente válidos.</p>
+                            <p>Garantindo a integridade das provas: auditoria técnica da cadeia de custódia.</p>
                             <a href="cadeia-custodia.html" class="cyber-button small">Detalhes do Serviço <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="service-hub-text">
                             <h3>Perícia em Dispositivos</h3>
-                            <p>Extração e análise forense de dados em qualquer dispositivo com tecnologia proprietária que preserva a integridade das evidências.</p>
+                            <p>Desvendando a prova digital: dispositivos, nuvem e quebras de sigilo revelados.</p>
                             <a href="pericia-dispositivos.html" class="cyber-button small">Detalhes do Serviço <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
